style.css
/* ... */
  .Button_show_more:hover{
    color: white;
  }

  .animated-image {
    opacity: 0;
    transform: translateY(50px); /* Inicialmente, mueve la imagen hacia abajo */
    transition: opacity 1s ease, transform 1s ease; /* Agrega una transición suave */
  }
  
  .animate {
    opacity: 1;
    transform: translateY(0); /* Cuando la imagen se desplaza hacia arriba, se muestra */
  }
  

  /* @media (max-width: 520px) {
    .section_Portfolio {
      margin-left: 250px;
    }
  } */


  .title_services {
    color: #343a40;
    font-size: 75px;
    text-align: left;
    margin-top: 60px;
    margin-left: 2%;
  }

  @media (max-width: 520px) {
    .title_services {
      font-size: 48px;
    }
  }

  .learn_more {
    font-size: 15px;
    color: #343a40;
    margin-top: 90px;
  }

  .div_title_services {
    display: flex;
    gap: 70%;
  }

  
  .div_main_container_services {
    display: flex;
  }

  .img_services {
    height: 300px;
  }

  

  .div_container_services {
    width: 100%;
    padding: 2.5%;
    margin-top: 25px;
    position: relative; /* Agregamos posición relativa */
  }

  @media (max-width: 850px) {
    .div_container_services {
      width: 40%;
      height: 400px;
      margin-top: 120px;
    }

    .img_services {
      height: 400px;
    }
  }

  @media (max-width: 1200px) {
    .div_main_container_services {
      display: flex;
      flex-direction: column;

    }

    .div_container_services {
      width: 100%;
      height: 350px;
      margin-top: 160px;
    }

    .img_services {
      height: 350px;
    }
  }


  .div_container_services::after {
    content: ""; /* Agregamos un pseudo-elemento */
    position: absolute; /* Posicionamos el pseudo-elemento */
    top: 40px;
    right: -1px; /* Ajustamos la posición para que la línea esté a la derecha de la tarjeta */
    height: 80%; /* La altura de la línea será igual a la altura de la tarjeta */
    width: 0.5px; /* Ancho de la línea */
    background-color: #adb5bd; /* Color de la línea */
}

/* Opcional: ajusta el margen para que la línea no aparezca en la última tarjeta */
.div_container_services:last-child::after {
    display: none;
}
  
  .div_container_services::before {
    content: attr(data-text); /* Agregamos un pseudo-elemento */
    font-size: 17px;
    color: #343a40;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    transition: opacity 0.8s ease;
    display: flex;
    font-weight: 600;
    align-items: center;
    justify-content: center;
    line-height: 1;
    position: absolute; /* Posicionamos el pseudo-elemento */
    width: 81%; /* Anchura del pseudo-elemento igual a la del contenedor */
    height: 86%; /* Altura del pseudo-elemento igual a la del contenedor */
    background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semitransparente */
    opacity: 1; /* Por defecto, el recuadro blanco es invisible */
    pointer-events: none;
}

.div_container_services:hover::before {
    opacity: 0; /* Al hacer hover, mostramos el recuadro blanco y el texto */
}



.div_container_first, .div_container_second{
  display: flex;
  flex-direction: column;
}

.vertical-text {
  writing-mode: vertical-rl; /* Establece el modo de escritura vertical de derecha a izquierda */
  text-orientation: sideways; /* Orienta el texto verticalmente con las letras mirando hacia arriba */
  font-size: 45px;
  color: #343a40;
  margin-left: 16%;
  margin-bottom: 200px;
  transform: rotate(180deg); /* Rota el texto 180 grados para que aparezca correctamente */
}

.text_contact {
  color: gray;
  font-size: 13px;
}

.text_strong_contact {
  font-size: 14px;
  color: #343a40;
  margin-top: 10px;
}

.container-form {
  width: 450px;
  
  margin: 0 auto; /* Centra el formulario horizontalmente */
}

.flex-container {
  display: flex;
  flex-wrap: wrap; /* Permite que los elementos se ajusten automáticamente a la línea siguiente */
}

.input-wrapper {
  flex: 0 0 48%; /* Establece el ancho de los campos de nombre y correo electrónico */
  margin-right: 2%; /* Agrega un espacio entre los campos */
  margin-top: 4%;
}

.input-wrapper input:focus + .line-1 {
  background-color: #343a40; /* Cambia el color de fondo de la línea a amarillo cuando el input está enfocado */
  height: 2px; 
  transition: background-color 0.8s ease, height 0.8s ease; 
}


.input-wrapper:last-child {
  margin-right: 0; /* Elimina el espacio entre el último campo y el botón */
}

.input-wrapper label {
  font-size: 12px;
  color: gray;
  display: block; /* Muestra las etiquetas de los inputs en una línea */
}

.but-get {
  display: block; /* Asegura que el botón esté en su propia línea */
  margin-top: 10px; /* Espacio entre el último campo y el botón */
}

#name,
#mail,
#text {
  border: transparent;
  background-color: #e8e8e7;
  font-size: 13px;
}

input[type="text"]:focus,
input[type="email"]:focus,
textarea:focus {
  outline: none;
}

.button-get {
  border: transparent;
  background-color: #e8e8e7;
  color: #343a40;
  font-weight: 600;
}

.container_button_get {
  display: flex;
  justify-content: flex-end;
  margin-top: 35px
}

.hr_style {
  background-color: gray;
}

.container_footer {
  display: flex;
  justify-content: space-around;
  gap: 10%;
  height: 70px;
  align-items: center;
  color: gray;
}


.container_contact_form {
  display: flex;
  gap: 100px;
  margin-left: 3%;
}

.subtitle_getintouch {
  font-size: 25px;
  margin-top: 75px;
  color: #343a40;
}

.container_photo_contact {
  margin-left: 2%;
}

.container_section_info {
  display: flex;
  gap: 80px;
  margin-top: 20px;
}

@media (max-width: 900px) {
  .container_contact_form {
    display: flex;
    flex-direction: column;
    margin-left: 7%;
  }

  
}

@media (max-width: 1450px) {
  .vertical-text {
    display: none;
  }
}
/* ... */

